k8s/gateway/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: munin-web
spec:
  type: ExternalName
  externalName: munin-web.mon.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: k8smon
spec:
  type: ExternalName
  externalName: k8s.mon.svc.cluster.local
